--- a/src/main/asciidoc/product/fallback_content/feedback.adoc
+++ b/src/main/asciidoc/product/fallback_content/feedback.adoc
@@ -2,5 +2,5 @@
 
 = We Need Feedback!
 
-Please feel free to raise any issues you find with this document in our https://issues.jboss.org/browse/JBTM[issue tracking system]
+Please feel free to raise any issues you find with this document in our https://issues.redhat.com/browse/JBTM[issue tracking system]
 
