--- a/src/main/asciidoc/project/fallback_content/feedback.adoc
+++ b/src/main/asciidoc/project/fallback_content/feedback.adoc
@@ -1,5 +1,6 @@
 
+
 = We Need Feedback!
 
-Please feel free to raise any issues you find with this document in our https://issues.jboss.org/browse/JBTM[issue tracking system]
+Please feel free to raise any issues you find with this document in our https://issues.redhat.com/browse/JBTM[issue tracking system]
 
