--- a/src/main/asciidoc/project/preface.adoc
+++ b/src/main/asciidoc/project/preface.adoc
@@ -1,11 +1,13 @@
 
 :sectnums!:
 
-= Preface
+== Preface
 
 :leveloffset: +1
+
 include::{projectSourceDir}/fallback_content/conventions.adoc[]
 include::{projectSourceDir}/fallback_content/feedback.adoc[]
+
 :leveloffset: -1
 
 :sectnums:
