--- a/src/main/asciidoc/project/book_info.adoc
+++ b/src/main/asciidoc/project/book_info.adoc
@@ -7,7 +7,7 @@ include::{projectSourceDir}/author_group.adoc[]
 
 xref:fallback_content/legal_notice.adoc[Legal Notice]
 
-== Abstract
+== Introduction
 
 The Narayana Project Documentation contains information on how to use Narayana to develop applications that use transaction technology to manage business processes.
 
