--- a/src/main/asciidoc/project/book_info.adoc
+++ b/src/main/asciidoc/project/book_info.adoc
@@ -3,7 +3,7 @@
 
 = Narayana Project Documentation
 
-xref:fallback_content/legal_notice.adoc[Legal Notice]
+include::{projectSourceDir}/fallback_content/legal_notice.adoc[]
 
 == Introduction
 
