--- a/src/main/asciidoc/project/fallback_content/legal_notice.adoc
+++ b/src/main/asciidoc/project/fallback_content/legal_notice.adoc
@@ -1,3 +1,4 @@
 
-Copyright The Narayana Authors SPDX short identifier: Apache-2.0 https://www.apache.org/licenses/LICENSE-2.0.html
+Copyright (C)
 
+The Narayana Authors SPDX short identifier: https://www.apache.org/licenses/LICENSE-2.0.html[Apache-2.0]
