Removed publican from the conventions pages

--- a/src/main/asciidoc/product/fallback_content/conventions.adoc
+++ b/src/main/asciidoc/product/fallback_content/conventions.adoc
@@ -101,7 +101,7 @@ Aside from standard usage for presenting the title of a work, italics denotes th
 For example:
 
 ====
-Publican is a _Asciidoc_ publishing system.
+This documentation uses _Asciidoc_.
 ====
 
 == Pull-quote Conventions
